--- a/themes/customDarkStone/customDarkStone/css/small2.css
+++ b/themes/customDarkStone/customDarkStone/css/small2.css
@@ -350,6 +350,14 @@ orangecenter {
 	text-align: center;
 }
 
+orangecenterbold {
+	font-family: Roboto;
+	font-size: 14;
+	color: #ebc304;
+	font-weight: bold;
+	text-align: center;
+}
+
 red {
 	font-family: Roboto;
 	font-size: 14;
