--- a/themes/darkOpacity Hundred/darkOpacityHundred/css/tooltip_item.css
+++ b/themes/darkOpacity Hundred/darkOpacityHundred/css/tooltip_item.css
@@ -67,6 +67,31 @@ p {
     color: #CB685E;
 }
 
+.neutral {
+    font-family: Roboto;
+    font-size: 15;
+    color: #c7c7c5;
+}
+
+.neutralvalue {
+    font-family: Roboto;
+    font-size: 15;
+    color: #c7c7c5;
+}
+
+.overFm {
+    font-family: Roboto;
+    font-size: 15;
+    color: #ffe21c;
+}
+
+.overFmvalue {
+    font-family: Roboto;
+    font-size: 15;
+    font-weight: bold;
+    color: #ffe21c;
+}
+
 .subeffectleftcolumn {
     margin-left: 32;
     leading: -15;
@@ -79,14 +104,14 @@ p {
 .exotic {
     font-family: Roboto;
     font-size: 15;
-    color: #658FC4;
+    color: #67acff;
 }
 
 .exoticvalue {
     font-family: Roboto;
     font-size: 15;
     font-weight: bold;
-    color: #658FC4;
+    color: #67acff;
 }
 
 .theoretical {
@@ -111,6 +136,13 @@ p {
     font-family: Roboto;
     font-size: 15;
     color: #ebc304;
+}
+
+.importantNotice {
+    font-family: Roboto;
+    font-size: 15;
+    color: #ebc304;
+    margin-left: 32;
 }
 
 .description {
