--- a/themes/oldUI Remake/oldUIRemake/css/button.css
+++ b/themes/oldUI Remake/oldUIRemake/css/button.css
@@ -1,27 +1,31 @@
 p {
-	font-family: Eras;
-	font-size: 15;
-	color: #2f2f25;
-	font-weight: bold;
-	text-align: center;
+    font-family: Eras;
+    font-size: 15;
+    color: #2f2f25;
+    font-weight: bold;
+    text-align: center;
+}
+
+left_p {
+    text-align: left;
 }
 
 light_p {
-	color: #ffffff;
+    color: #ffffff;
 }
 
 small_p {
-	font-size: 13;
+    font-size: 13;
 }
 
 lightSmall_small {
-	color: #ffffff;
+    color: #ffffff;
 }
 
 condensed_p {
-	font-family: Eras;
+    font-family: Eras;
 }
 
 big_condensed_p {
-	font-size: 26;
+    font-size: 26;
 }
