Update oldUI Remake
Update oldUI Remake for DOFUS 2.64 version

--- a/themes/oldUI Remake/oldUIRemake/css/small2.css
+++ b/themes/oldUI Remake/oldUIRemake/css/small2.css
@@ -29,6 +29,14 @@ right {
 	font-weight: normal;
 	text-align: right;
 }
+rightpadding {
+	font-family: Roboto;
+	font-size: 14;
+	color: #c7c7c5;
+	font-weight: normal;
+	text-align: right;
+	padding-right: 5px;
+}
 center {
 	font-family: Roboto;
 	font-size: 14;
@@ -361,11 +369,23 @@ orangecenterbold {
 	font-weight: bold;
 	text-align: center;
 }
+lightred {
+	font-family: Roboto;
+	font-size: 14;
+	color: #FF5C55;
+	text-align: justify;
+}
 red {
 	font-family: Roboto;
 	font-size: 14;
 	color: #eb0000;
 	text-align: justify;
+}
+lightredleft {
+	font-family: Roboto;
+	font-size: 14;
+	color: #FF5C55;
+	text-align: left;
 }
 redleft {
 	font-family: Roboto;
@@ -373,11 +393,23 @@ redleft {
 	color: #eb0000;
 	text-align: left;
 }
+lightredright {
+	font-family: Roboto;
+	font-size: 14;
+	color: #FF5C55;
+	text-align: right;
+}
 redright {
 	font-family: Roboto;
 	font-size: 14;
 	color: #eb0000;
 	text-align: right;
+}
+lightredcenter {
+	font-family: Roboto;
+	font-size: 14;
+	color: #FF5C55;
+	text-align: center
 }
 redcenter {
 	font-family: Roboto;
