--- a/themes/oldUI Remake/oldUIRemake/css/tooltip_spell.css
+++ b/themes/oldUI Remake/oldUIRemake/css/tooltip_spell.css
@@ -100,6 +100,13 @@ p {
 	color: #ebc304;
 }
 
+.importantNotice {
+	font-family: Verdana;
+	font-size: 15;
+	color: #ebc304;
+	margin-left: 32;
+}
+
 .description {
 	font-family: Verdana;
 	font-size: 15;
@@ -179,4 +186,10 @@ spellZone {
 	font-family: Verdana;
 	font-size: 15;
 	color: #c7c7c5;
+}
+.valueLineWithIcon {
+	font-family: Verdana;
+	font-size: 15;
+	color: #c7c7c5;
+	margin-right: 126;
 }
